# sheen

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
plans/architecture/: architecture_001.md
plans/code_review/: code_review_001.md
plans/repo_review/: repo_review_001.md
plans/tts_model/: tts_model_001.md  tts_model_002.md
plans/verify_collator/: verify_collator_001.py
plans/verify_custom_tokenizer/: test_pretokenizer.py  verify_tokenizer_001.py
plans/verify_dataset/: verify_dataset_001.py
plans/verify_labels/: verify_labels_001.py
plans/verify_snac/: verify_snac_001.py
plans/verify_tokenizer/: verify_tokenizer_001.py
plans/verify_training/: verify_training_001.py
scripts/: build_tokenizer.py  prepare_dataset.py
src/: config.py  data.py  infer.py  main.py  model.py  tokenizer.json  train.py
