[project]
name = "sheen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "snac",
    "transformers[torch]>=4.57.6",
]

[tool.uv.sources]
snac = { git = "https://github.com/thewh1teagle/snac", rev = "dev" }

[dependency-groups]
dev = [
    "huggingface-hub>=0.36.0",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
    "tensorboard>=2.20.0",
]
